--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,87 @@
+/* 
+Global Styles
+==============================================================
+*/
+
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-size: 1.6;
+}
+
+.header, .cards, .footer, .instructions-container {
+    padding: 1em;
+}
+/* 
+Layout
+==============================================================
+*/
 .container {
+    height: 100vh;
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(11, 1fr) 200px;
+    grid-template-rows: minmax(0px, 50px) repeat(10,1fr) minmax(0px, 50px);
 }
 
 .header {
-    grid-column: 1 / 10;
+    grid-column: 1 / 12;
+    grid-row: 1 / 2;
     background-color: red;
 }
 .cards {
     background-color: orange;
-    grid-column: 1 / 10;
+    grid-column: 1 / 12;
+    grid-row: 2 / 12;
 }
 .footer {
-    grid-column: 1 / 10;
+    grid-column: 1 / 12;
+    grid-row: 12 / 13;
     background-color: yellow;
 }
 .instructions-container {
-    grid-column: 10 / -1;
+    width: 100%;
+    grid-column: 12 / 13;
+    grid-row: 1 / -1;
     background-color: green;
 }
+
+/* 
+Cards
+==============================================================
+*/
+.cards {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.card {
+padding: 2em;
+display: flex;
+background-color: white;
+box-shadow: 5px 5px 50px -24px rgba(0, 0, 0, 0.26);
+border-radius: 7px;
+width: 200px;
+justify-content: center;
+align-items: center;
+}
+img {
+    width: 100%;
+}
+
+.btn {
+    background-color: red; /* Blue background */
+    border: none; /* Remove borders */
+    color: white; /* White text */
+    padding: 12px 16px; /* Some padding */
+    font-size: 16px; /* Set a font size */
+    cursor: pointer; /* Mouse pointer on hover */
+  }
+  
+  /* Darker background on mouse-over */
+  .btn:hover {
+    background-color: rgb(152, 47, 35);
+  }
