--- a/src/index.css
+++ b/src/index.css
@@ -3,50 +3,66 @@ Global Styles
 ==============================================================
 */
 
-
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    font-size: 1.6;
+  margin: 0;
+  line-height: 1.6;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.header, .cards, .footer, .instructions-container {
-    padding: 1em;
+.header,
+.cards,
+.footer,
+.instructions-container {
+  padding: 1em;
 }
 /* 
 Layout
 ==============================================================
 */
 .container {
-    height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(11, 1fr) 200px;
-    grid-template-rows: minmax(0px, 50px) repeat(10,1fr) minmax(0px, 50px);
+  background-color: #ffeead;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(11, 1fr) 350px;
+  grid-template-rows: minmax(0px, 50px) repeat(10, 1fr) minmax(0px, 50px);
 }
 
 .header {
-    grid-column: 1 / 12;
-    grid-row: 1 / 2;
-    background-color: red;
+  grid-column: 1 / 12;
+  grid-row: 1 / 2;
+  background-color: #96ceb4;
 }
 .cards {
-    background-color: orange;
-    grid-column: 1 / 12;
-    grid-row: 2 / 12;
+  grid-column: 1 / 12;
+  grid-row: 2 / 12;
 }
 .footer {
-    grid-column: 1 / 12;
-    grid-row: 12 / 13;
-    background-color: yellow;
+  grid-column: 1 / 12;
+  grid-row: 12 / 13;
+  background-color: #ffcc5c;
 }
 .instructions-container {
-    width: 100%;
-    grid-column: 12 / 13;
-    grid-row: 1 / -1;
-    background-color: green;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 100%;
+  grid-column: 12 / 13;
+  grid-row: 1 / -1;
+  background-color: #88d8b0;
+}
+@media only screen and (max-width: 600px) {
+  .instructions-container {
+    display: none;
+  }
+  .footer,
+  .cards,
+  .header {
+    grid-column: 1 / -1;
+  }
 }
 
 /* 
@@ -54,34 +70,62 @@ Cards
 ==============================================================
 */
 .cards {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+  display: flex;
+  align-items: flex-start;
+  overflow-y: auto;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.cards > .card:nth-child(1n) {
+  background-color: #96ceb4;
+}
+.cards > .card:nth-child(2n) {
+  background-color: #ff6f69;
+}
+.cards > .card:nth-child(3n) {
+  background-color: #88d8b0;
+}
+.cards > .card:nth-child(4n) {
+  background-color: #ffcc5c;
 }
 .card {
-padding: 2em;
-display: flex;
-background-color: white;
-box-shadow: 5px 5px 50px -24px rgba(0, 0, 0, 0.26);
-border-radius: 7px;
-width: 200px;
-justify-content: center;
-align-items: center;
+  font-size: 2em;
+  color: #ffeead;
+  text-align: center;
+  align-self: flex-start;
+  margin: 1em;
+  padding: 2em;
+  display: flex;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 7px;
+  width: 200px;
+  justify-content: center;
+  align-items: center;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 img {
-    width: 100%;
+  width: 100%;
 }
 
 .btn {
-    background-color: red; /* Blue background */
-    border: none; /* Remove borders */
-    color: white; /* White text */
-    padding: 12px 16px; /* Some padding */
-    font-size: 16px; /* Set a font size */
-    cursor: pointer; /* Mouse pointer on hover */
-  }
-  
-  /* Darker background on mouse-over */
-  .btn:hover {
-    background-color: rgb(152, 47, 35);
-  }
+  background-color: red;
+  border-radius: 7px;
+  border: none;
+  color: white;
+  padding: 12px 16px;
+  font-size: 16px;
+  cursor: pointer;
+  position: relative;
+  top: -32px;
+  right: -72.2px;
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: rgb(152, 47, 35);
+}
