--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@ Global Styles
 
 body {
   margin: 0;
-  line-height: 1.6;
+  font-size: 15px;
+  line-height: 1.4;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -28,13 +29,20 @@ Layout
   height: 100vh;
   display: grid;
   grid-template-columns: repeat(11, 1fr) 350px;
-  grid-template-rows: minmax(0px, 50px) repeat(10, 1fr) minmax(0px, 50px);
+  grid-template-rows: minmax(75px, 1fr) repeat(10, 1fr) minmax(0px, 50px);
 }
 
 .header {
   grid-column: 1 / 12;
   grid-row: 1 / 2;
   background-color: #96ceb4;
+  display: flex;
+  justify-content: center;
+}
+@media only screen and (min-width: 600px) {
+  .header {
+    display: block;
+  }
 }
 .cards {
   grid-column: 1 / 12;
@@ -66,6 +74,21 @@ Layout
 }
 
 /* 
+Header
+==============================================================
+*/
+.header > button {
+  padding: 15px 25px;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  margin: 0 1em;
+  color: white;
+  border: none;
+  border-radius: 7px;
+  background-color: #008cba;
+}
+/* 
 Cards
 ==============================================================
 */
@@ -74,7 +97,12 @@ Cards
   align-items: flex-start;
   overflow-y: auto;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
+}
+@media only screen and (min-width: 600px) {
+  .cards {
+    justify-content: flex-start;
+  }
 }
 .cards > .card:nth-child(1n) {
   background-color: #96ceb4;
@@ -92,15 +120,15 @@ Cards
   font-size: 2em;
   color: #ffeead;
   text-align: center;
-  align-self: flex-start;
+  position: relative;
   margin: 1em;
-  padding: 2em;
   display: flex;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 7px;
-  width: 200px;
+  width: 150px;
+  height: 75px;
   justify-content: center;
   align-items: center;
 }
@@ -110,19 +138,19 @@ Cards
 }
 img {
   width: 100%;
+  display: none;
 }
 
 .btn {
   background-color: red;
   border-radius: 7px;
+  padding: 5px 7px;
   border: none;
   color: white;
-  padding: 12px 16px;
-  font-size: 16px;
+  position: absolute;
+  top: 0px;
+  right: 0px;
   cursor: pointer;
-  position: relative;
-  top: -32px;
-  right: -72.2px;
 }
 
 /* Darker background on mouse-over */
